Fixes issue with missaligned tables

--- a/inboxen/inboxen/static/style.css
+++ b/inboxen/inboxen/static/style.css
@@ -94,7 +94,7 @@ h2 {
     float:right;
 }
 
-table {
+.alias-table {
     padding-left:10%;
 }
 
